# Clickploy

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/api/: admin.go  api.go  auth.go  middleware.go  project.go  storage.go  stream.go  webhook.go
backend/internal/auth/: utils.go
backend/internal/builder/: builder.go
backend/internal/db/: db.go
backend/internal/deployer/: deployer.go
backend/internal/models/: models.go
backend/internal/ports/: ports.go
cli/: Cargo.toml
cli/src/: api.rs  config.rs  main.rs  models.rs
cli/src/ui/: activity.rs  app.rs  create_project.rs  deployment_logs.rs  deployments.rs  docs.rs  mod.rs  network.rs  project_detail.rs  project_settings.rs  projects.rs  settings.rs  setup.rs  storage.rs
frontend/: Dockerfile  README.md  package.json  svelte.config.js
frontend/src/lib/: api.ts  auth.ts  project-dashboard.svelte.ts
frontend/src/lib/components/: Footer.svelte  Navbar.svelte
frontend/src/routes/: +error.svelte  +layout.svelte  +page.svelte
frontend/src/routes/(auth)/login/: +page.svelte
frontend/src/routes/(auth)/register/: +page.svelte
frontend/src/routes/activity/: +page.svelte
frontend/src/routes/admin/: +page.svelte
frontend/src/routes/deployments/: +page.svelte
frontend/src/routes/docs/: +layout.svelte  +page.svelte
frontend/src/routes/docs/api/: +page.svelte
frontend/src/routes/network/: +page.svelte
frontend/src/routes/settings/: +page.svelte
frontend/src/routes/storage/: +page.svelte
(+10 files in other folders)
